# openember

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.application  Kconfig.build  Kconfig.core  Kconfig.dependencies  Kconfig.logging  Kconfig.transport  Makefile  README.md  TODO.md  agloo-cli  agloo-cli.sh  embark  ember
apps/: CMakeLists.txt  Kconfig  Kconfig.application
apps/Alogd/: main.cpp
apps/ConfigManager/: CMakeLists.txt
apps/MessageDispatcher/: CMakeLists.txt  main.cpp
apps/Template/: CMakeLists.txt
apps/WebServer/: CMakeLists.txt  main.cpp
apps/examples/: CMakeLists.txt  Kconfig
apps/examples/core/: CMakeLists.txt  service_client.cpp  service_server.cpp  topic_listener.cpp  topic_talker.cpp
apps/examples/hello_node/: CMakeLists.txt  main.cpp
apps/examples/mqtt_emqx_client/: CMakeLists.txt  main.cpp
apps/examples/msgbus_nng_forwarder/: CMakeLists.txt  forwarder.c  forwarder.cpp
apps/examples/msgbus_two_nodes/: CMakeLists.txt  README.md  publisher.cpp  subscriber.cpp
apps/examples/network_sockets/: CMakeLists.txt  example_tcp_echo.cpp  example_udp_ping.cpp  example_unix_echo.cpp
apps/examples/pubsub_two_nodes/: CMakeLists.txt  README.md  publisher.c  publisher.cpp  subscriber.cpp
apps/examples/transport/: CMakeLists.txt  transport_listener.cpp  transport_talker.cpp
apps/references/: Kconfig
apps/references/sensor_data_reference/: CMakeLists.txt  main.cpp
apps/services/: Kconfig
apps/services/logger/: CMakeLists.txt  main.cpp
apps/services/ota_update_service/: CMakeLists.txt  main.cpp
apps/services/web_dashboard/: CMakeLists.txt  main.cpp
apps/services/web_dashboard/web_root/: index.html
apps/system/: Kconfig
apps/system/config_service/: CMakeLists.txt  main.cpp
apps/system/device_manager/: CMakeLists.txt  main.cpp
apps/system/health_monitor/: CMakeLists.txt  main.cpp
apps/system/launch_manager/: CMakeLists.txt  fsm.c  fsm.cpp  fsm.h  main.cpp  smm.cpp  smm.h
apps/system/log_service/: CMakeLists.txt  main.cpp
apps/tools/: Kconfig
components/: CMakeLists.txt  Kconfig
components/Common/: common.h  netdev.c  ringbuffer.c
components/GDSL/: README.md
components/GDSL/src/: gdsl.h
components/Log/: CMakeLists.txt  log_spdlog.cpp  log_wrapper.c  zlog.conf
components/Network/: CMakeLists.txt  socket_uri.cpp  socket_uri.h
components/libcsv/: libcsv.h
components/libyaml/: CMakeLists.txt
components/libyaml/src/: yaml_private.h
components/logging/: CMakeLists.txt  log_wrapper.c  log_wrapper.h  oe_log_c.c
components/mqtt/: CMakeLists.txt  mqtt_async_wrapper.c  mqtt_client.cpp  mqtt_client.hpp  mqtt_client_wrapper.c  mqtt_wrapper.h
components/msgbus/: CMakeLists.txt  lcm_transport_backend.cpp  lcm_wrapper.c  lcm_wrapper.h  message.c  message.h  mosquitto_wrapper.c  mqtt_client_wrapper.c  msgbus_node.cpp  msgbus_node.hpp  nng_wrapper.c  nng_wrapper.h  transport_backend.hpp  transport_backend_clib.cpp  transport_backend_factory.cpp  transport_backend_legacy.cpp  zmq_wrapper.c  zmq_wrapper.h
components/network/: CMakeLists.txt  socket_uri.cpp  socket_uri.h
components/ppool/: example.c  ppool_errno.c  ppool_errno.h  ppool_queue.c  ppool_queue.h
components/pubsub/: ember_pubsub.h  ember_pubsub_lcm.c  ember_pubsub_udp.c  ember_pubsub_zmq.c
components/transport/: CMakeLists.txt
components/transport/src/: key_builder.cpp  publisher.cpp  service_client.cpp  service_server.cpp  session.cpp  subscriber.cpp
core/: CMakeLists.txt  Kconfig
core/inc/: ember_config.h  ember_def.h  ember_json_config.h.in  ember_log_backend.h.in  ember_log_path.h.in  list.h  openember.h  topic.h
core/inc/openember/: log.h  log_c.h
core/include/openember/: client.hpp  context.hpp  init.hpp  node.hpp  publisher.hpp  serialization.hpp  service.hpp  subscriber.hpp  type_support.hpp
core/src/: context.cpp  init.cpp  node.cpp
core/src/service/: client_base.cpp  service_base.cpp
core/src/topic/: publisher_base.cpp  subscriber_base.cpp
examples/: CMakeLists.txt
examples/msgbus_nng_forwarder/: forwarder.c
examples/pubsub_two_nodes/: CMakeLists.txt  subscriber.c
libs/pubsub/: CMakeLists.txt  ember_pubsub.h  ember_pubsub_nng.c
modules/: CMakeLists.txt  Kconfig  Kconfig.module
modules/Acquisition/: CMakeLists.txt  main.c  main.cpp
modules/Algorithm/: filter.c
modules/Alogd/: CMakeLists.txt  main.c  main.cpp
modules/ConfigManager/: CMakeLists.txt  main.c  main.cpp
modules/DeviceManager/: CMakeLists.txt  main.c  main.cpp
modules/MessageDispatcher/: CMakeLists.txt  main.c  main.cpp
modules/MonitorAlarm/: CMakeLists.txt  main.c  main.cpp
modules/OTA/: CMakeLists.txt  main.c  main.cpp
modules/Template/: CMakeLists.txt  main.c  main.cpp
modules/WebServer/: CMakeLists.txt  main.c  main.cpp
modules/WebServer/web_root/: index.html
modules/WebServer/web_src/: .gitignore  README.md  package.json
modules/WebServer/web_src/public/: index.html
modules/WorkflowController/: CMakeLists.txt  main.c
platform/hal/: CMakeLists.txt
platform/hal/src/linux/: can.cpp  file.cpp  gpio.cpp  i2c.cpp  oe_can.c  oe_file.c  oe_gpio.c  oe_i2c.c  oe_onewire.c  oe_sbus.c  oe_spi.c  oe_uart.c  onewire.cpp  sbus.cpp  serial_port.cpp  spi.cpp  uart.cpp
platform/lpio/: CMakeLists.txt  README.md
platform/lpio/examples/: CMakeLists.txt  can_logger.cpp  i2c_scan.cpp  serial_echo.cpp
platform/lpio/include/lpio/: CANBus.hpp  DeviceBase.hpp  GPIO.hpp  I2CBus.hpp  OneWire.hpp  PWM.hpp  RS485.hpp  SBUS.hpp  SBUSReader.hpp  SPIBus.hpp  SerialPort.hpp
platform/lpio/src/: CANBus.cpp  GPIO.cpp  I2CBus.cpp  OneWire.cpp  PWM.cpp  RS485.cpp  SBUS.cpp  SBUSReader.cpp  SPIBus.cpp  SerialPort.cpp
platform/osal/: CMakeLists.txt
platform/osal/src/linux/: cond.cpp  event.cpp  fifo.cpp  mq.cpp  mutex.cpp  oe_cond.c  oe_event.c  oe_fifo.c  oe_mq.c  oe_mutex.c  oe_pipe.c  oe_sem.c  oe_shm.c  oe_signals.c  oe_socket.c  oe_thread.c  oe_time.c  pipe.cpp  sem.cpp  shm.cpp  signals.cpp  socket.cpp  socket_ops.cpp  thread.cpp  (+1 more)
tools/: CMakeLists.txt  Kconfig
tools/emcom/: CMakeLists.txt  main.cpp
tools/sbus-receiver/: CMakeLists.txt  main.cpp
(+208 files in other folders)
