set(FOLDER_NAME "components")

if(NOT DEFINED OPENEMBER_COMPONENT_MQTT OR OPENEMBER_COMPONENT_MQTT)
    add_subdirectory(mqtt)
endif()
add_subdirectory(msgbus)
add_subdirectory(logging)
add_subdirectory(GDSL)
add_subdirectory(Common)
if(NOT DEFINED OPENEMBER_COMPONENT_NETWORK OR OPENEMBER_COMPONENT_NETWORK)
    add_subdirectory(network)
endif()
add_subdirectory(libcsv)
add_subdirectory(libyaml)
add_subdirectory(ppool)