set(FOLDER_NAME "components")

if(NOT DEFINED OPENEMBER_COMPONENT_TRANSPORT OR OPENEMBER_COMPONENT_TRANSPORT)
    add_subdirectory(transport)
endif()
if(NOT DEFINED OPENEMBER_COMPONENT_MQTT OR OPENEMBER_COMPONENT_MQTT)
    add_subdirectory(mqtt)
endif()
add_subdirectory(msgbus)
add_subdirectory(logging)
add_subdirectory(Common)
if(NOT DEFINED OPENEMBER_COMPONENT_NETWORK OR OPENEMBER_COMPONENT_NETWORK)
    add_subdirectory(network)
endif()
add_subdirectory(ppool)